bug fix: gallery layout overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -1002,7 +1002,7 @@ nav .nav-overlay .container .nav-link .text {
     color: var(--text-primary);
     font-size: 1.25rem;
     font-weight: 300;
-    padding-top: .5rem;
+    padding-top: .6rem;
 }
 
 #gallery .grid .container .media-title a {
